Copy recommended titles file if it doesn't exist